--- a/competicoes.html
+++ b/competicoes.html
@@ -154,8 +154,8 @@
                   </thead>
                 <tr>
                     <td> 1º </td>
-                    <td> Porto </td>
-                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
+                    <td> Dortmund </td>
+                    <td><img src="assets/img/dortmund.png" width="50" height="50"/></td>
                     <td>18</td> 
                     <td>15</td>
                     <td>1</td>
