--- a/equipasinternacional.html
+++ b/equipasinternacional.html
@@ -83,6 +83,10 @@
               <div class="col-md-4"></div>
               </div>
 
+              &nbsp;
+
+              <input type="text" id="myInput" onkeyup="mySearch()" placeholder="Search Nome da Equipa...(ex: Real / Real Madrid)">
+
 
               *click table head to sort
               <!--logos=500x500 <-->
@@ -100,221 +104,221 @@
                 <tbody>
                   <tr>
                     
-                    <td><img src="assets/img/real.png" width="55" height="55"/></td>
-                    <td>Real Madrid</td>
+                    <td><a href="plantel.html"><img src="assets/img/real.png" width="55" height="55"/></a></td>
+                    <td><a href="plantel.html">Real Madrid</a></td>
                     <td>Champions</td>
                     <td>Espanha</td> 
                   </tr>
                    <tr>
-                     <td><img src="assets/img/barca.png" width="50" height="50"/></td>
-                     <td>Barcelona</td>
+                     <td><a href="plantel.html"><img src="assets/img/barca.png" width="50" height="50"/></a></td>
+                     <td><a href="plantel.html">Barcelona</a></td>
                      <td>Champions</td>
                      <td>Espanha</td>
                  </tr>
                  <tr>
-                     <td><img src="assets/img/bayern.png" width="50" height="50"/></td>
-                    <td>Bayern de Múnich</td>
+                     <td><a href="plantel.html"><img src="assets/img/bayern.png" width="50" height="50"/></a></td>
+                    <td><a href="plantel.html">Bayern de Múnich</a></td>
                     <td>Champions</td>
                     <td>Alemanha</td>
                   </tr>
                   <tr>
-                     <td><img src="assets/img/dortmund.png" width="50" height="50"/></td>
-                    <td>Borussia Dortmund</td>
+                     <td><a href="plantel.html"><img src="assets/img/dortmund.png" width="50" height="50"/></a></td>
+                    <td><a href="plantel.html">Borussia Dortmund</a></td>
                     <td>Champions</td>
                     <td>Alemanha</td>
                   </tr>
                   <tr>
-                    <td><img src="assets/img/city.png" width="50" height="50"/></td>
-                    <td>Manchester City</td>
+                    <td><a href="plantel.html"><img src="assets/img/city.png" width="50" height="50"></a></td>
+                    <td><a href="plantel.html">Manchester City</a></td>
                     <td>Champions</td>
                     <td>Inglaterra</td> 
                   </tr>
                    <tr>
-                     <td><img src="assets/img/atletico.png" width="45" height="45"/></td>
-                     <td>Atletico de Madrid</td>
+                     <td><a href="plantel.html"><img src="assets/img/atletico.png" width="45" height="45"/></a></td>
+                     <td><a href="plantel.html">Atletico de Madrid</a></td>
                      <td>Champions</td>
                      <td>Espanha</td>
                  </tr>
                  <tr>
-                    <td><img src="assets/img/brugge.png" width="50" height="50"/></td>
-                    <td>Club Brugge</td>
+                    <td><a href="plantel.html"><img src="assets/img/brugge.png" width="50" height="50"/></a></td>
+                    <td><a href="plantel.html">Club Brugge</a></td>
                     <td>Champions</td>
-                    <td>Italia</td>
+                    <td>Bélgica</td>
                   </tr>
 
                   <tr>
-                     <td><img src="assets/img/monaco.png" width="50" height="50"/></td>
-                    <td>Monaco</td>
+                     <td><a href="plantel.html"><img src="assets/img/monaco.png" width="50" height="50"/></a></td>
+                    <td><a href="plantel.html">Monaco</a></td>
                     <td>Champions</td>
-                    <td>Italia</td>
+                    <td>França</td>
                   </tr>
 
                   <tr>
-                     <td><img src="assets/img/tottenham.png" width="50" height="50"/></td>
-                    <td>Tottenham</td>
+                     <td><a href="plantel.html"><img src="assets/img/tottenham.png" width="50" height="50"/></a></td>
+                    <td><a href="plantel.html">Tottenham</a></td>
                     <td>Champions</td>
-                    <td>Italia</td>
+                    <td>Ingles</td>
                   </tr>
 
                   <tr>
-                     <td><img src="assets/img/inter.png" width="50" height="50"/></td>
-                    <td>Inter Milan</td>
+                     <td><a href="plantel.html"><img src="assets/img/inter.png" width="50" height="50"/></a></td>
+                    <td><a href="plantel.html">Inter Milan</a></td>
                     <td>Champions</td>
-                    <td>Italia</td>
+                    <td>Itália</td>
                   </tr>
 
                   <tr>
-                     <td><img src="assets/img/psv.png" width="50" height="50"/></td>
-                    <td>PSV</td>
+                     <td><a href="plantel.html"><img src="assets/img/psv.png" width="50" height="50"/></a></td>
+                    <td><a href="plantel.html">PSV</a></td>
                     <td>Champions</td>
-                    <td>Italia</td>
+                    <td>Holanda</td>
                   </tr>
 
                   <tr>
-                     <td><img src="assets/img/psg.png" width="50" height="50"/></td>
-                    <td>PSG</td>
+                     <td><a href="plantel.html"><img src="assets/img/psg.png" width="50" height="50"/></a></td>
+                    <td><a href="plantel.html">PSG</a></td>
                     <td>Champions</td>
-                    <td>Italia</td>
+                    <td>França</td>
                   </tr>
 
                   <tr>
-                     <td><img src="assets/img/liverpool.png" width="50" height="50"/></td>
-                    <td>Liverpool</td>
+                     <td><a href="plantel.html"><img src="assets/img/liverpool.png" width="50" height="50"/></a></td>
+                    <td><a href="plantel.html">Liverpool</a></td>
                     <td>Champions</td>
-                    <td>Italia</td>
+                    <td>Inglaterra</td>
                   </tr>
 
                   <tr>
-                     <td><img src="assets/img/napoli.png" width="50" height="50"/></td>
-                    <td>Napoli</td>
+                     <td><a href="plantel.html"><img src="assets/img/napoli.png" width="50" height="50"/></a></td>
+                    <td><a href="plantel.html">Napoli</a></td>
                     <td>Champions</td>
-                    <td>Italia</td>
+                    <td>Itália</td>
                   </tr>
 
                   <tr>
-                     <td><img src="assets/img/estrela.png" width="50" height="50"/></td>
-                    <td>Estrela Vermelha</td>
+                     <td><a href="plantel.html"><img src="assets/img/estrela.png" width="50" height="50"/></a></td>
+                    <td><a href="plantel.html">Estrela Vermelha</a></td>
                     <td>Champions</td>
-                    <td>Italia</td>
+                    <td>Sérvia</td>
                   </tr>
 
                   <tr>
-                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
-                    <td>Porto</td>
+                     <td><a href="plantel.html"><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></a></td>
+                    <td><a href="plantel.html">Porto</a></td>
                     <td>Champions</td>
-                    <td>Italia</td>
+                    <td>Portugal</td>
                   </tr>
 
                   <tr>
-                     <td><img src="assets/img/schalke.png" width="50" height="50"/></td>
-                    <td>Schalke</td>
+                     <td><a href="plantel.html"><img src="assets/img/schalke.png" width="50" height="50"/></a></td>
+                    <td><a href="plantel.html">Schalke</a></td>
                     <td>Champions</td>
-                    <td>Italia</td>
+                    <td>Alemanha</td>
                   </tr>
 
                   <tr>
-                     <td><img src="assets/img/galatasaray.png" width="50" height="50"/></td>
-                    <td>Galatasaray</td>
+                     <td><a href="plantel.html"><img src="assets/img/galatasaray.png" width="50" height="50"/></a></td>
+                    <td><a href="plantel.html">Galatasaray</a></td>
                     <td>Champions</td>
-                    <td>Italia</td>
+                    <td>Turqia</td>
                   </tr>
 
                   <tr>
-                     <td><img src="assets/img/moscovo.png" width="50" height="50"/></td>
-                    <td>Moscovo</td>
+                     <td><a href="plantel.html"><img src="assets/img/moscovo.png" width="50" height="50"></a></td>
+                    <td><a href="plantel.html">Moscovo</a></td>
                     <td>Champions</td>
-                    <td>Italia</td>
+                    <td>Rússia</td>
                   </tr>
 
                   <tr>
-                     <td><img src="assets/img/ajax.png" width="50" height="50"/></td>
-                    <td>Ajax</td>
+                     <td><a href="plantel.html"><img src="assets/img/ajax.png" width="50" height="50"/></a></td>
+                    <td><a href="plantel.html">Ajax</a></td>
                     <td>Champions</td>
-                    <td>Italia</td>
+                    <td>Holanda</td>
                   </tr>
 
                   <tr>
-                     <td><img src="assets/img/benficalogo.png" width="50" height="50"/></td>
-                    <td>Benfica</td>
+                     <td><a href="plantel.html"><img src="assets/img/benficalogo.png" width="50" height="50"/></a></td>
+                    <td><a href="plantel.html">Benfica</a></td>
                     <td>Champions</td>
-                    <td>Italia</td>
+                    <td>Portugal</td>
                   </tr>
 
                   <tr>
-                     <td><img src="assets/img/atenas.png" width="50" height="50"/></td>
-                    <td>AEK Atenas</td>
+                     <td><a href="plantel.html"><img src="assets/img/atenas.png" width="50" height="50"/></a></td>
+                    <td><a href="plantel.html">AEK Atenas</a></td>
                     <td>Champions</td>
-                    <td>Italia</td>
+                    <td>Grécia</td>
                   </tr>
 
                   <tr>
-                     <td><img src="assets/img/lyon.png" width="50" height="50"/></td>
-                    <td>Lyon</td>
+                     <td><a href="plantel.html"><img src="assets/img/lyon.png" width="50" height="50"/></a></td>
+                    <td><a href="plantel.html">Lyon</a></td>
                     <td>Champions</td>
-                    <td>Italia</td>
+                    <td>França</td>
                   </tr>
 
                   <tr>
-                     <td><img src="assets/img/schaktar.png" width="50" height="50"/></td>
-                    <td>Shakhtar Donetsk</td>
+                     <td><a href="plantel.html"><img src="assets/img/schaktar.png" width="50" height="50"/></a></td>
+                    <td><a href="plantel.html">Shakhtar Donetsk</a></td>
                     <td>Champions</td>
-                    <td>Italia</td>
+                    <td>Ucrânia</td>
                   </tr>
 
                   <tr>
-                     <td><img src="assets/img/hoffen.png" width="50" height="50"/></td>
-                    <td>Hoffenheim</td>
+                     <td><a href="plantel.html"><img src="assets/img/hoffen.png" width="50" height="50"/></a></td>
+                    <td><a href="plantel.html">Hoffenheim</a></td>
                     <td>Champions</td>
-                    <td>Italia</td>
+                    <td>Alemanha</td>
                   </tr>
 
                   <tr>
-                     <td><img src="assets/img/roma.png" width="50" height="50"/></td>
-                    <td>Roma</td>
+                     <td><a href="plantel.html"><img src="assets/img/roma.png" width="50" height="50"/></a></td>
+                    <td><a href="plantel.html">Roma</a></td>
                     <td>Champions</td>
-                    <td>Italia</td>
+                    <td>Itália</td>
                   </tr>
 
                   <tr>
-                     <td><img src="assets/img/plzen.png" width="50" height="50"/></td>
-                    <td>Plzen</td>
+                     <td><a href="plantel.html"><img src="assets/img/plzen.png" width="50" height="50"/></a></td>
+                    <td><a href="plantel.html">Plzen</a></td>
                     <td>Champions</td>
-                    <td>Italia</td>
+                    <td>Rep´´ublica Checa</td>
                   </tr>
 
                   <tr>
-                     <td><img src="assets/img/cska.png" width="50" height="50"/></td>
-                    <td>CSKA</td>
+                     <td><a href="plantel.html"><img src="assets/img/cska.png" width="50" height="50"/></a></td>
+                    <td><a href="plantel.html">CSKA</a></td>
                     <td>Champions</td>
-                    <td>Italia</td>
+                    <td>Rússia</td>
                   </tr>
 
                   <tr>
-                     <td><img src="assets/img/united.png" width="50" height="50"/></td>
-                    <td>Manchester United</td>
+                     <td><a href="plantel.html"><img src="assets/img/united.png" width="50" height="50"/></a></td>
+                    <td><a href="plantel.html">Manchester United</a></td>
                     <td>Champions</td>
-                    <td>Italia</td>
+                    <td>Inglaterra</td>
                   </tr>
 
                   <tr>
-                     <td><img src="assets/img/juventos.png" width="40" height="50"/></td>
-                    <td>Juventus</td>
+                     <td><a href="plantel.html"><img src="assets/img/juventos.png" width="40" height="50"/></a></td>
+                    <td><a href="plantel.html">Juventus</a></td>
                     <td>Champions</td>
-                    <td>Italia</td>
+                    <td>Itália</td>
                   </tr>
 
                   <tr>
-                     <td><img src="assets/img/valencia.png" width="40" height="50"/></td>
-                    <td>Valencia</td>
+                     <td><a href="plantel.html"><img src="assets/img/valencia.png" width="40" height="50"/></a></td>
+                    <td><a href="plantel.html">Valencia</a></td>
                     <td>Champions</td>
-                    <td>Italia</td>
+                    <td>Espanha</td>
                   </tr>
 
                   <tr>
-                     <td><img src="assets/img/boys.png" width="40" height="50"/></td>
-                    <td>Young Boys</td>
+                     <td><a href="plantel.html"><img src="assets/img/boys.png" width="40" height="50"/></a></td>
+                    <td><a href="plantel.html">Young Boys</a></td>
                     <td>Champions</td>
-                    <td>Italia</td>
+                    <td>Suíça</td>
                   </tr>
 
 
