--- a/primeiraliga.html
+++ b/primeiraliga.html
@@ -350,64 +350,120 @@
                   <th>Data</th>
                   <th>Horas</th>
                   <th>Equipa Vistada</th>
+                  <th> - </th>
                   <th>Equipa Visitante</th>
                 </tr>
                 </thead>
                 <tbody>
                   <tr>
-                    <td> 21/02/2019 </td>
-                    <td> 17:00 </td>
-                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
-                    <td><img src="https://upload.wikimedia.org/wikipedia/pt/f/f0/500px-SL_Benfica_logo_svg.png" width="50" height="50"/></td> 
-                  </tr>
-                <tr>
-                    <td> 21/02/2019 </td>
-                    <td> 17:00 </td>
-                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
-                    <td><img src="https://upload.wikimedia.org/wikipedia/pt/f/f0/500px-SL_Benfica_logo_svg.png" width="50" height="50"/></td> 
+                    <td> 02/03/2019 </td>
+                    <td> 15:00 </td>
+                    <td><a href="plantel.html"><img src="assets/img/nacional.png" width="50" height="50"/></a></td>
+                    <th> -</th>                  
+                    <td><a href="plantel.html"><img src="assets/img/tondela.png" width="50" height="50"/></a></td>
                   </tr>
                  <tr>
-                    <td> 21/02/2019 </td>
-                    <td> 17:00 </td>
-                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
-                    <td><img src="https://upload.wikimedia.org/wikipedia/pt/f/f0/500px-SL_Benfica_logo_svg.png" width="50" height="50"/></td> 
+                    <td> 2/03/2019 </td>
+                    <td> 18:00 </td>
+                    <td><a href="plantel.html"><img src="assets/img/moreirense.png" width="50" height="50"/></a></td>
+                    <th> - </th>
+                    <td><a href="plantel.html"><img src="assets/img/vitoria.png" width="50" height="50"/></a></td> 
                   </tr>
                   <tr>
-                    <td> 21/02/2019 </td>
-                    <td> 17:00 </td>
-                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
-                    <td><img src="https://upload.wikimedia.org/wikipedia/pt/f/f0/500px-SL_Benfica_logo_svg.png" width="50" height="50"/></td> 
-                  </tr>
-                  <tr>  
-                    <td> 21/02/2019 </td>
-                    <td> 17:00 </td>
-                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
-                    <td><img src="https://upload.wikimedia.org/wikipedia/pt/f/f0/500px-SL_Benfica_logo_svg.png" width="50" height="50"/></td> 
-                  </tr>
-                    <tr>
-                    <td> 21/02/2019 </td>
-                    <td> 17:00 </td>
-                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
-                    <td><img src="https://upload.wikimedia.org/wikipedia/pt/f/f0/500px-SL_Benfica_logo_svg.png" width="50" height="50"/></td> 
+                    <td> 03/03/2019 </td>
+                    <td> 20:30 </td>
+                    <td><a href="plantel.html"><img src="assets/img/porto.png" width="50" height="50"/></a></td>
+                    <th> - </th>                  
+                    <td><a href="plantel.html"><img src="assets/img/benficalogo.png" width="50" height="50"/></a></td>
                   </tr>
                   <tr>
-                    <td> 21/02/2019 </td>
-                    <td> 17:00 </td>
-                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
-                    <td><img src="https://upload.wikimedia.org/wikipedia/pt/f/f0/500px-SL_Benfica_logo_svg.png" width="50" height="50"/></td> 
+                    <td> 03/03/2019 </td>
+                    <td> 15:00 </td>
+                    <td><a href="plantel.html"><img src="assets/img/belenenses.png" width="50" height="50"/></a></td>
+                    <th> - </th>                  
+                    <td><a href="plantel.html"><img src="assets/img/feirense.png" width="50" height="50"/></a></td>
                   </tr>
-                   <tr>
-                    <td> 21/02/2019 </td>
-                    <td> 17:00 </td>
-                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
-                    <td><img src="https://upload.wikimedia.org/wikipedia/pt/f/f0/500px-SL_Benfica_logo_svg.png" width="50" height="50"/></td> 
+                  <tr>
+                    <td> 03/03/2019 </td>
+                    <td> 15:00 </td>
+                    <td><a href="plantel.html"><img src="assets/img/chaves.png" width="50" height="50"/></a></td>
+                    <th> - </th>                  
+                    <td><a href="plantel.html"><img src="assets/img/santa.png" width="50" height="50"/></a></td>
                   </tr>
-                   <tr>
-                    <td> 21/02/2019 </td>
-                    <td> 17:00 </td>
-                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
-                    <td><img src="https://upload.wikimedia.org/wikipedia/pt/f/f0/500px-SL_Benfica_logo_svg.png" width="50" height="50"/></td> 
+                  <tr>
+                    <td> 03/03/2019 </td>
+                    <td> 17:30 </td>
+                    <td><a href="plantel.html"><img src="assets/img/rioave.png" width="50" height="50"/></a></td>
+                    <th> - </th>                  
+                    <td><a href="plantel.html"><img src="assets/img/braga.png" width="50" height="50"/></a></td>
                   </tr>
+                  <tr>
+                    <td> 03/03/2019 </td>
+                    <td> 20:00 </td>
+                    <td><a href="plantel.html"><img src="assets/img/scp.png" width="50" height="50"/></a></td>
+                    <th> - </th>                  
+                    <td><a href="plantel.html"><img src="assets/img/portimonense.png" width="50" height="50"/></a></td>
+                  </tr>
+                  <tr>
+                    <td> 03/03/2019 </td>
+                    <td> 20:15 </td>
+                    <td><a href="plantel.html"><img src="assets/img/vsc.png" width="50" height="50"/></a></td>
+                    <th> - </th>                  
+                    <td><a href="plantel.html"><img src="assets/img/maritimo.png" width="50" height="50"/></a></td>
+                  </tr>
+                  <tr>
+                    <td> 08/2019 </td>
+                    <td> 20:30 </td>
+                    <td><a href="plantel.html"><img src="assets/img/chaves.png" width="50" height="50"/></a></td>
+                    <th> - </th>                  
+                    <td><a href="plantel.html"><img src="assets/img/rioave.png" width="50" height="50"/></a></td>
+                  </tr>
+                  <tr>
+                    <td> 09/03/2019 </td>
+                    <td> 15:30 </td>
+                    <td><a href="plantel.html"><img src="assets/img/maritimo.png" width="50" height="50"/></a></td>
+                    <th> - </th>                  
+                    <td><a href="plantel.html"><img src="assets/img/moreirense.png" width="50" height="50"/></a></td>
+                  </tr>
+                  <tr>
+                    <td> 09/03/2019 </td>
+                    <td> 18:00 </td>
+                    <td><a href="plantel.html"><img src="assets/img/braga.png" width="50" height="50"/></a></td>
+                    <th> - </th>                  
+                    <td><a href="plantel.html"><img src="assets/img/vitoria.png" width="50" height="50"/></a></td>
+                  </tr>
+                  <tr>
+                    <td> 09/03/2019 </td>
+                    <td> 20:30 </td>
+                    <td><a href="plantel.html"><img src="assets/img/boavista.png" width="50" height="50"/></a></td>
+                    <th> - </th>                  
+                    <td><a href="plantel.html"><img src="assets/img/scp.png" width="50" height="50"/></a></td>
+                  </tr>
+                  <tr>
+                    <td> 10/03/2019 </td>
+                    <td> 15:00 </td>
+                    <td><a href="plantel.html"><img src="assets/img/portimonense.png" width="50" height="50"/></a></td>
+                    <th> - </th>                  
+                    <td><a href="plantel.html"><img src="assets/img/nacional.png" width="50" height="50"/></a></td>
+                  </tr>
+                  <tr>
+                    <td> 10/03/2019 </td>
+                    <td> 15:00 </td>
+                    <td><a href="plantel.html"><img src="assets/img/santa.png" width="50" height="50"/></a></td>
+                    <th> - </th>                  
+                    <td><a href="plantel.html"><img src="assets/img/aves.png" width="50" height="50"/></a></td>
+                  </tr>
+                  <tr>
+                    <td> 10/03/2019 </td>
+                    <td> 17:30 </td>
+                    <td><a href="plantel.html"><img src="assets/img/vitoria.png" width="50" height="50"/></a></td>
+                    <th> - </th>                  
+                    <td><a href="plantel.html"><img src="assets/img/tondela.png" width="50" height="50"/></a></td>
+                  </tr>
+
+
+                 
+
                   </tbody>
                 </table>
                 </div>
@@ -482,6 +538,8 @@
 
         </div>
       </div>
+
+      &nsbp;
 
               
 
