--- a/equipasnacional.html
+++ b/equipasnacional.html
@@ -57,15 +57,7 @@
                      <a class="dropdown-item" href="uefa.html">UEFA Champions League</a>
                    </div>
                  </li>
-                 <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle= "dropdown" aria-haspopup="true" aria-expanded="false"> Noticias
-                  </a>
-                  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">All</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Mais Vistas</a>
-                    <a class="dropdown-item" href="#">Mais Recentes</a>
-                </li>
+                
                </ul>
                   <form class="form-inline my-2 my-lg-0">
                     <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
@@ -125,85 +117,85 @@
                     <td>Braga</td> 
                   </tr>
                   <tr>
-                    <td><img src="assets/img/scp.png" width="45" height="45"/></td>
+                    <td><a href="plantel.html"><img src="assets/img/scp.png" width="45" height="45"/></a></td>
                     <td><a href="plantel.html">Sporting Clube De Portugal</a></td>
                     <td>Primeira</td>
                     <td>Lisboa</td> 
                   </tr>
                   <tr>
-                    <td><img src="assets/img/moreirense.png" width="50" height="50"/></td>
+                    <td><a href="plantel.html"><img src="assets/img/moreirense.png" width="50" height="50"/></a></td>
                     <td><a href="plantel.html">Moreirense Futebol Clube</a></td>
                     <td>Primeira</td>
                     <td>Guimarães</td> 
                   </tr>
                   <tr>
-                    <td><img src="assets/img/vsc.png" width="45" height="45"/></td>
+                    <td><a href="plantel.html"><img src="assets/img/vsc.png" width="45" height="45"></a></td>
                     <td><a href="plantel.html">Vitória Sport Clube</a></td>
                     <td>Primeira</td>
                     <td>Guimarães</td> 
                   </tr>
                   <tr>
-                    <td><img src="assets/img/belenenses.png" width="50" height="50"/></td>
+                    <td><a href="plantel.html"><img src="assets/img/belenenses.png" width="50" height="50"/></a></td>
                     <td><a href="plantel.html">Belenenses SAD</a></td>
                     <td>Primeira</td>
                     <td>Lisboa</td> 
                   </tr>
                   <tr>
-                    <td><img src="assets/img/rioave.png" width="45" height="45"/></td>
+                    <td><a href="plantel.html"><img src="assets/img/rioave.png" width="45" height="45"/></a></td>
                     <td><a href="plantel.html">Rio Ave Futebol Clube</a></td>
                     <td>Primeira</td>
                     <td>Vila Do Conde</td> 
                   </tr>
                   <tr>
-                    <td><img src="assets/img/portimonense.png" width="50" height="50"/></td>
+                    <td><a href="plantel.html"><img src="assets/img/portimonense.png" width="50" height="50"/></a></td>
                     <td><a href="plantel.html">Portimonense Sporting Clube</a></td>
                     <td>Primeira</td>
                     <td>Portimão</td> 
                   </tr>
                   <tr>
-                    <td><img src="assets/img/santa.png" width="50" height="50"/></td>
+                    <td><a href="plantel.html"><img src="assets/img/santa.png" width="50" height="50"/></a></td>
                     <td><a href="plantel.html">Clube Desportivo Santa Clara</a></td>
                     <td>Primeira</td>
                     <td>São Miguel - Açores</td> 
                   </tr>
                   <tr>
-                    <td><img src="assets/img/tondela.png" width="50" height="50"/></td>
+                    <td><a href="plantel.html"><img src="assets/img/tondela.png" width="50" height="50"/></a></td>
                     <td><a href="plantel.html">Clube Desportivo De Tondela</a></td>
                     <td>Primeira</td>
                     <td>Viseu</td> 
                   </tr>
                   <tr>
-                    <td><img src="assets/img/boavista.png" width="50" height="50"/></td>
+                    <td><a href="plantel.html"><img src="assets/img/boavista.png" width="50" height="50"/></a></td>
                     <td><a href="plantel.html">Boavista Futebol Clube</a></td>
                     <td>Primeira</td>
                     <td>Ramalde - Porto</td> 
                   </tr>
                   <tr>
-                    <td><img src="assets/img/aves.png" width="50" height="50"/></td>
+                    <td><a href="plantel.html"><img src="assets/img/aves.png" width="50" height="50"/></a></td>
                     <td><a href="plantel.html">Clube Desportivo Das Aves</a></td>
                     <td>Primeira</td>
                     <td>Vila Das Aves - Santo Tirso</td> 
                   </tr>
                   <tr>
-                    <td><img src="assets/img/maritimo.png" width="50" height="50"/></td>
+                    <td><a href="plantel.html"><img src="assets/img/maritimo.png" width="50" height="50"/></a></td>
                     <td><a href="plantel.html">Club Sport Marítimo</a></td>
                     <td>Primeira</td>
                     <td>Ilha Da Madeira</td> 
                   </tr>
                   <tr>
-                    <td><img src="assets/img/nacional.png" width="50" height="50"/></td>
+                    <td><a href="plantel.html"><img src="assets/img/nacional.png" width="50" height="50"/></a></td>
                     <td><a href="plantel.html">Clube Desportivo Nacional</a></td>
                     <td>Primeira</td>
                     <td>Ilha Da Madeira</td> 
                   </tr>
                   <tr>
-                    <td><img src="assets/img/chaves.png" width="50" height="50"/></td>
+                    <td><a href="plantel.html"><img src="assets/img/chaves.png" width="50" height="50"/></a></td>
                     <td><a href="plantel.html">Grupo Desportivo de Chaves</a></td>
                     <td>Primeira</td>
                     <td>Cidade De Chaves </td> 
                   </tr>
                   <tr>
-                    <td><img src="assets/img/feirense.png" width="50" height="50"/></td>
+                    <td><a href="plantel.html"><img src="assets/img/feirense.png" width="50" height="50"/></a></td>
                     <td><a href="plantel.html">Clube Desportivo Feirense</a></td>
                     <td>Primeira</td>
                     <td>Santa Maria Da Feira</td> 
