--- a/equipasinternacional.html
+++ b/equipasinternacional.html
@@ -57,15 +57,7 @@
                      <a class="dropdown-item" href="uefa.html">UEFA Champions League</a>
                    </div>
                  </li>
-                 <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle= "dropdown" aria-haspopup="true" aria-expanded="false"> Noticias
-                  </a>
-                  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">All</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Mais Vistas</a>
-                    <a class="dropdown-item" href="#">Mais Recentes</a>
-                </li>
+                 
                </ul>
                   <form class="form-inline my-2 my-lg-0">
                     <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
@@ -220,7 +212,7 @@
                      <td><a href="plantel.html"><img src="assets/img/galatasaray.png" width="50" height="50"/></a></td>
                     <td><a href="plantel.html">Galatasaray</a></td>
                     <td>Champions</td>
-                    <td>Turqia</td>
+                    <td>Túrqia</td>
                   </tr>
 
                   <tr>
@@ -283,7 +275,7 @@
                      <td><a href="plantel.html"><img src="assets/img/plzen.png" width="50" height="50"/></a></td>
                     <td><a href="plantel.html">Plzen</a></td>
                     <td>Champions</td>
-                    <td>Rep´´ublica Checa</td>
+                    <td>República Checa</td>
                   </tr>
 
                   <tr>
