--- a/uefa.html
+++ b/uefa.html
@@ -767,7 +767,6 @@
                 <tr>
                   <th>1ª Mão</th>
                   <th>2ª Mão</th>
-                  <th>Horas</th>
                   <th>Equipa</th>
                   <th>_</th>
                   <th>Equipa</th>
@@ -777,82 +776,76 @@
                   <tr>
                     <td> 12/02/2019 </td>
                     <td> 06/03/2019 </td>
-                    <td> 20:00 </td>
-                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
+                    <td><a href="plantel.html"><img src="assets/img/united.png" width="55" height="55"/></a></td>
                     <td> _ </td>
-                    <td><img src="https://upload.wikimedia.org/wikipedia/pt/f/f0/500px-SL_Benfica_logo_svg.png" width="50" height="50"/></td> 
+                     <td><a href="plantel.html"><img src="assets/img/psg.png" width="55" height="55"/></a></td> 
                   </tr>
                   </tbody>
                   <tbody>
                   <tr>
                     <td> 12/02/2019 </td>
                     <td> 06/03/2019 </td>
-                    <td> 20:00 </td>
-                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
+                    <td><a href="plantel.html"><img src="assets/img/roma.png" width="55" height="55"/></a></td>
                     <td> _ </td>
-                    <td><img src="https://upload.wikimedia.org/wikipedia/pt/f/f0/500px-SL_Benfica_logo_svg.png" width="50" height="50"/></td> 
+                     <td><a href="plantel.html"><img src="assets/img/porto.png" width="55" height="55"/></a></td> 
                   </tr>
                   </tbody>
                   <tbody>
                   <tr>
-                    <td> 12/02/2019 </td>
-                    <td> 06/03/2019 </td>
-                    <td> 20:00 </td>
-                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
+                    <td> 13/02/2019 </td>
+                    <td> 05/03/2019 </td>
+                    <td><a href="plantel.html"><img src="assets/img/ajax.png" width="55" height="55"/></a></td>
                     <td> _ </td>
-                    <td><img src="https://upload.wikimedia.org/wikipedia/pt/f/f0/500px-SL_Benfica_logo_svg.png" width="50" height="50"/></td> 
+                     <td><a href="plantel.html"><img src="assets/img/real.png" width="55" height="55"/></a></td> 
                   </tr>
                   </tbody>
                   <tbody>
                   <tr>
-                    <td> 12/02/2019 </td>
-                    <td> 06/03/2019 </td>
-                    <td> 20:00 </td>
-                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
+                    <td> 13/02/2019 </td>
+                    <td> 05/03/2019 </td>
+                    <td><a href="plantel.html"><img src="assets/img/tottenham.png" width="55" height="55"/></a></td>
                     <td> _ </td>
-                    <td><img src="https://upload.wikimedia.org/wikipedia/pt/f/f0/500px-SL_Benfica_logo_svg.png" width="50" height="50"/></td> 
+                     <td><a href="plantel.html"><img src="assets/img/dortmund.png" width="55" height="55"/></a></td> 
                   </tr>
                   </tbody>
                   <tbody>
                   <tr>
-                    <td> 12/02/2019 </td>
-                    <td> 06/03/2019 </td>
-                    <td> 20:00 </td>
-                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
+                    <td> 19/02/2019 </td>
+                    <td> 13/03/2019 </td>
+                    <td><a href="plantel.html"><img src="assets/img/lyon.png" width="55" height="55"/></a></td>
                     <td> _ </td>
-                    <td><img src="https://upload.wikimedia.org/wikipedia/pt/f/f0/500px-SL_Benfica_logo_svg.png" width="50" height="50"/></td> 
+                     <td><a href="plantel.html"><img src="assets/img/barca.png" width="55" height="55"/></a></td> 
                   </tr>
                   </tbody>
                   <tbody>
                   <tr>
-                    <td> 12/02/2019 </td>
-                    <td> 06/03/2019 </td>
-                    <td> 20:00 </td>
-                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
+                    <td> 19/02/2019 </td>
+                    <td> 13/03/2019 </td>
+                    <td><a href="plantel.html"><img src="assets/img/liverpool.png" width="55" height="55"/></a></td>
                     <td> _ </td>
-                    <td><img src="https://upload.wikimedia.org/wikipedia/pt/f/f0/500px-SL_Benfica_logo_svg.png" width="50" height="50"/></td> 
+                     <td><a href="plantel.html"><img src="assets/img/bayern.png" width="55" height="55"/></a></td> 
                   </tr>
                   </tbody>
                   <tbody>
                   <tr>
-                    <td> 12/02/2019 </td>
-                    <td> 06/03/2019 </td>
-                    <td> 20:00 </td>
-                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
+                    <td> 20/02/2019 </td>
+                    <td> 12/03/2019 </td>
+                    <td><a href="plantel.html"><img src="assets/img/schalke.png" width="55" height="55"/></a></td>
                     <td> _ </td>
-                    <td><img src="https://upload.wikimedia.org/wikipedia/pt/f/f0/500px-SL_Benfica_logo_svg.png" width="50" height="50"/></td> 
+                     <td><a href="plantel.html"><img src="assets/img/city.png" width="55" height="55"/></a></td> 
                   </tr>
                   </tbody>
                   <tbody>
                   <tr>
-                    <td> 12/02/2019 </td>
-                    <td> 06/03/2019 </td>
-                    <td> 20:00 </td>
-                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
+                    <td> 20/02/2019 </td>
+                    <td> 12/03/2019 </td>
+                    <td><a href="plantel.html"><img src="assets/img/atletico.png" width="55" height="55"/></a></td>
                     <td> _ </td>
-                    <td><img src="https://upload.wikimedia.org/wikipedia/pt/f/f0/500px-SL_Benfica_logo_svg.png" width="50" height="50"/></td> 
+                     <td><a href="plantel.html"><img src="assets/img/juventos.png" width="55" height="55"/></a></td> 
                   </tr>
                   </tbody>
+
+                  
                 </table>
                 </div>
 
